(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -warn-error -a)))
 (release
  (flags
   (:standard -warn-error -a))))

(library
 (name occc)
 (modules
  utils
  tokens
  lexer
  settings
  compile
  ast
  ast_print
  parser
  tok_stream
  assembly
  codegen
  emit
  tacky
  tacky_gen
  tacky_print
  unique_ids
  replace_pseudos
  instruction_fixup
  resolve
  label_loops
  typecheck
  types
  symbols
  rounding)
 (libraries re camlp-streams)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))
